--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "node": "12.16.x"
   },
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "start": "vue-cli-service build",
+    "start": "vue-cli-service serve",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
