--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "node": "12.16.x"
   },
   "scripts": {
-    "build": "vue-cli-service build"
+    "build": "vue-cli-service build",
+    "postinstall": "npm install express"
   },
   "dependencies": {
     "axios": "^0.19.2",
